--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,3 +1,4 @@
+{% extends 'food/base.html'%}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -8,6 +9,7 @@
 		<title>Document</title>
 	</head>
 	<body>
+		{% block body %}
 		<h1>This is an index page</h1>
 
 		{% for item in itemlist %} 
@@ -17,5 +19,7 @@
             </li>
         </ul>
         {% endfor %}
+		{% endblock %}
+		
 	</body>
 </html>
