--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -25,6 +25,10 @@
             </a>
         </div>
     </nav>
+    <!-- for Spacing -->
+    <div class="mb-5">
+        
+    </div>
     
     {% block body %}
     {% endblock %}
