--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -20,7 +20,7 @@
 					{{item.id}} -- {{item.item_name}}</a>
             </li>
         </ul> -->
-			<div class="row">
+			<div class="row mb-5">
 				<div class="col-md-3 offset-md-2">
 					<img 
 						src="{{ item.item_image }}"
