--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -20,7 +20,7 @@
 					{{item.id}} -- {{item.item_name}}</a>
             </li>
         </ul> -->
-			<div class="row mb-5">
+			<div class="row mb-3">
 				<div class="col-md-3 offset-md-2">
 					<img 
 						src="{{ item.item_image }}"
@@ -30,12 +30,40 @@
 						>
 				</div>
 				<div class="col-md-4">
-					<h3>{{ item.item_name}}</h3>
-					<h3>{{ item.item_desc}}</h3>
-					<h3>{{ item.item_price}}</h3>
+					<h3
+						style="font-size: 1.5rem;"
+					>
+						{{ item.item_name}}
+					</h3>
+					<h5
+						 style="font-size: 1rem;
+						 font-style: italic;
+					
+					">
+						{{ item.item_desc | truncatewords:6 }}
+					</h5>
+					<h6>
+						${{ item.item_price}}
+					</h6>
+					<h6 style="
+					font-style: italic;
+					">
+						added for:
+					</h6>
+					<h6 style="
+					font-style: italic;
+					">
+						added by superuser:
+					</h6>
 				</div>
 				<div class="col-md-3">
-
+					<a
+					 href="{% url 'food:detail' item.id %}"
+					 style="width: 100px;"
+					 class="btn btn-success"
+					 >
+						Details
+					</a>
 				</div>
 			</div>
         {% endfor %}
