--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-dark bg-dark">
         <a href="{% url 'food:index' %}" class="navbar-brand">Exortic</a>
         <div class="navbar">
-            <a href="#" class="nav-item nav-link btn btn-dark">
+            <a href="{% url 'food:create_item' %}" class="nav-item nav-link btn btn-dark">
                 ADD Item
             </a>
             <a href="#" class="nav-item nav-link btn btn-dark">
