--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -48,12 +48,12 @@
 					<h6 style="
 					font-style: italic;
 					">
-						added for:
+						added for: {{ item.for_user }}
 					</h6>
 					<h6 style="
 					font-style: italic;
 					">
-						added by superuser:
+						added by superuser: admin
 					</h6>
 				</div>
 				<div class="col-md-3">
