--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -60,7 +60,7 @@
              Delete
         </a>
         <a 
-            href="#"
+            href="{% url 'food:index' %}"
             style="width: 80px"
             class="btn btn-success"
         
