--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -20,7 +20,7 @@
             <a href="#" class="nav-item nav-link btn btn-dark">
                 Profile
             </a>
-            <a href="#" class="nav-item nav-link btn btn-dark">
+            <a href="{% url 'register' %}" class="nav-item nav-link btn btn-dark">
                 Sign up
             </a>
         </div>
