--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends 'food/base.html' %}
 {% block body %}
-<form action="">
+<form method="POST">
     {% csrf_token %}
     {{ form }}
     <button type="submit">Sign Up</button>
