--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -25,6 +25,17 @@
             </a>
         </div>
     </nav>
+
+    {% if messages %}
+
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+
+    {% endif %}
+
     <!-- for Spacing -->
     <div class="mb-5">
         
