--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -2,47 +2,80 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'food/style.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a href="{% url 'food:index' %}" class="navbar-brand">Exortic</a>
-        <div class="navbar">
-            <a href="{% url 'food:create_item' %}" class="nav-item nav-link btn btn-dark">
-                ADD Item
-            </a>
-            <a href="#" class="nav-item nav-link btn btn-dark">
-                Profile
-            </a>
-            <a href="{% url 'register' %}" class="nav-item nav-link btn btn-dark">
-                Sign up
-            </a>
-        </div>
-    </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>My Project</title>
+		{% comment %}
+		<link
+			rel="stylesheet"
+			href="{% static 'food/style.css' %}" />
+		{% endcomment %}
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous" />
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"></script>
+	</head>
+	<body>
+		<nav class="navbar navbar-dark bg-dark">
+			<a
+				href="{% url 'food:index' %}"
+				class="navbar-brand"
+				style="font-size: 40px; font-style: italic">
+				Exortic
+			</a>
 
-    {% if messages %}
+			<div class="navbar">
+				{% if user.is_authenticated %}
 
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-            </div>
-        {% endfor %}
+				<a
+					href="{% url 'food:create_item'%}"
+					class="nav-item nav-link btn btn-dark">
+					Add Item
+				</a>
 
-    {% endif %}
+				<a
+					href="{% url 'profile' %}"
+					class="nav-item nav-link btn btn-dark">
+					Profile
+				</a>
 
-    <!-- for Spacing -->
-    <div class="mb-5">
-        
-    </div>
-    
-    {% block body %}
-    {% endblock %}
-    
-</body>
+				<a
+					href="{% url 'logout' %}"
+					class="nav-item nav-link btn btn-dark">
+					Logout
+				</a>
+				{% else %}
+
+				<a
+					href="{% url 'login' %}"
+					class="nav-item nav-link btn btn-dark">
+					Login
+				</a>
+				<a
+					href="{% url 'register' %}"
+					class="nav-item nav-link btn btn-dark">
+					Sign Up
+				</a>
+
+				{% endif %}
+			</div>
+		</nav>
+
+		{%if messages%} {%for message in messages%}
+		<div class="alert alert-{{ message.tags}}">{{ message }}</div>
+
+		{%endfor%} {%endif%}
+		<!--For Spacing-->
+		<div class="mb-5"></div>
+
+		{% block body %} {% endblock %}
+	</body>
 </html>
