--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -1,70 +1,40 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'food/style.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</head>
-<body>
-   
-    <nav class="navbar navbar-dark bg-dark">
-        <a href="{% url 'food:index' %}" class="navbar-brand">
-            Exortillo
-        </a>
+{% extends 'food/base.html' %} {% block body %}
 
-        <div class="navbar">
-            <a href="{% url 'food:create_item' %}" class="nav-item nav-link btn btn-dark">
-                Add Item
-            </a>
-            {% if user.is_authenticated %}
+<div class="row">
+	<div class="col-md-2 offset-md-1">
+		<img
+			height="150px"
+			width="250px"
+			clas="card"
+			src="{{ item.item_image}}" />
+	</div>
+	<div class="col-md-4 offset-md-1">
+		<h1 style="font-style: italic">{{ item.item_name}}</h1>
+		<h2 style="font-style: italic; font-size: 1.3rem; text-align: justify">
+			{{ item.item_desc}}
+		</h2>
+		<h3 style="font-style: italic">${{ item.item_price}}</h3>
+	</div>
+	<div class="col-md-3 offset-md-1">
+		<a
+			href="{% url 'food:update_item' item.id %}"
+			style="width: 80px"
+			class="btn btn-warning"
+			>Edit
+		</a>
+		<a
+			href="{% url 'food:delete_item' item.id %}"
+			style="width: 80px"
+			class="btn btn-danger"
+			>Delete
+		</a>
+		<a
+			href="{% url 'food:index' %}"
+			style="width: 80px"
+			class="btn btn-success"
+			>Back
+		</a>
+	</div>
+</div>
 
-            <a href="#" class="nav-item nav-link btn btn-dark">
-                Profile
-            </a>
-                <a href="{% url 'food:create_item' %}" class="nav-item nav-link btn btn-dark">
-                    Add Item
-                </a>
-
-            <a href="{% url 'register' %}" class="nav-item nav-link btn btn-dark">
-                Sign Up
-            </a>
-                <a href="#" class="nav-item nav-link btn btn-dark">
-                    Profile
-                </a>
-
-                <a href="{% url 'logout' %}" class="nav-item nav-link btn btn-dark">
-                    Logout
-                </a>
-
-            {% else %}
-
-                <a href="{% url 'login' %}" class="nav-item nav-link btn btn-dark">
-                    Login
-                </a>
-
-                <a href="{% url 'register' %}" class="nav-item nav-link btn btn-dark">
-                    Sign Up
-                </a>
-
-            {% endif %}
-        </div>
-    </nav>
-
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
-    <!-- for spacing -->
-    <div class="mb-5">
-    </div>
-    {% block body %}
-    {% endblock %}
-</body>
-</html>
+{% endblock %}
