--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -53,7 +53,7 @@
 					<h6 style="
 					font-style: italic;
 					">
-						added by superuser: admin
+						added by superuser: {{ item.user }}
 					</h6>
 				</div>
 				<div class="col-md-3">
