--- a/food/templates/food/item-form.html
+++ b/food/templates/food/item-form.html
@@ -1,19 +1,37 @@
 {% extends 'food/base.html' %}
 {% block body %}
-<form method="POST">
-    {% csrf_token %}
-    <label for="">Product Code : </label><br>
-    {{ form.prod_code }}
-    <br><label for="">For User : </label><br>
-    {{ form.for_user }}
-    <br><label for="">Item Name : </label><br>
-    {{ form.item_name }}
-    <br><label for="">Item Description : </label><br>
-    {{ form.item_desc }}
-    <br><label for="">Item Price : </label><br>
-    {{ form.item_price }}
-    <br><label for="">Item Image : </label><br>
-    {{ form.item_image }}
-    <button type="submit">Save</button>
-</form>
+
+<br /><br /><br />
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 offset-md-4">
+			<div class="card">
+				<div class="card-header text-white bg-info">
+					<div class="card-title">Add Item</div>
+				</div>
+				<div class="card-body">
+					<form method="POST">
+                        {% csrf_token %}
+                        <label class="offset-md-1" for="">Product Code : </label><br>
+                        <span class="offset-md-1">{{ form.prod_code }}</span>
+                        <br><label class="offset-md-1" for="">For User : </label><br>
+                        <span class="offset-md-1">{{ form.for_user }}</span>
+                        <br><label class="offset-md-1" for="">Item Name : </label><br>
+                        <span class="offset-md-1">{{ form.item_name }}</span>
+                        <br><label class="offset-md-1" for="">Item Description : </label><br>
+                        <span class="offset-md-1">{{ form.item_desc }}</span>
+                        <br><label class="offset-md-1" for="">Item Price : </label><br>
+                        <span class="offset-md-1">{{ form.item_price }}</span>
+                        <br><label class="offset-md-1" for="">Item Image : </label><br>
+                        <span class="offset-md-1">{{ form.item_image }}</span> <br><br>
+                        <button class="btn btn-success btn-sm offset-md-1" type="submit">Save</button>
+                    </form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 {% endblock %}
