--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="card">
-                <div class="card-haeder text-white bg-info">
+                <div class="card-header text-white bg-info">
                     <div class="card-title offset-md-1">
                         Login
                     </div>
