--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -17,53 +17,70 @@
 	</div>
 	<div class="col-md-3 offset-md-1">
 		{% if user.is_superuser %}
-			<a
-				href="{% url 'food:update_item' item.id %}"
-				style="width: 80px"
-				class="btn btn-warning"
-				>Edit
-			</a>
-			<a
-				href="{% url 'food:delete_item' item.id %}"
-				style="width: 80px"
-				class="btn btn-danger"
-				>Delete
-			</a>
-			<a
-				href="{% url 'food:index' %}"
-				style="width: 80px"
-				class="btn btn-success"
-				>Back
-		{% elif user.is_authenticated and user.profile.user_type == 'Rest' %}	
-			<a
-				href="{% url 'food:update_item' item.id %}"
-				style="width: 80px"
-				class="btn btn-warning"
-				>Edit
-			</a>
-			
-			<a
-				href="{% url 'food:index' %}"
-				style="width: 80px"
-				class="btn btn-success"
-				>Back	
-			</a>
-		{% elif user.is_authenticated and user.profile.user_type == 'Rest' %}	
-			<a
-				href="#"
-				style="width: 80px"
-				class="btn btn-warning"
-				>Order
-			</a>
-			
-			<a
-				href="{% url 'food:index' %}"
-				style="width: 80px"
-				class="btn btn-success"
-				>Back	
-			</a>
-		{% endif %}		
+		<a
+			href="{% url 'food:update_item' item.id %}"
+			style="width: 80px"
+			class="btn btn-warning"
+			>Edit
+		</a>
+		<a
+			href="{% url 'food:delete_item' item.id %}"
+			style="width: 80px"
+			class="btn btn-danger"
+			>Delete
+		</a>
+		<a
+			href="{% url 'food:index' %}"
+			style="width: 80px"
+			class="btn btn-success"
+			>Back
+		</a>
+
+		{% elif user.is_authenticated and user.profile.user_type == 'Rest' %}
+
+		<a
+			href="{% url 'food:update_item' item.id %}"
+			style="width: 80px"
+			class="btn btn-warning"
+			>Edit
+		</a>
+		<a
+			href="{% url 'food:index' %}"
+			style="width: 80px"
+			class="btn btn-success"
+			>Back
+		</a>
+
+		{% elif user.is_authenticated and user.profile.user_type == 'Cust' %}
+
+		<a
+			href="#"
+			style="width: 80px"
+			class="btn btn-warning">
+			Order
+		</a>
+		<a
+			href="{% url 'food:index' %}"
+			style="width: 80px"
+			class="btn btn-success"
+			>Back
+		</a>
+
+		{%endif%}
 	</div>
 </div>
 
-{% endblock %}
+{% for obj in hist %}
+
+<div class="row mb-1">
+	<div class="col-md-8 offset-md-2 bg-danger text-white">
+		<div class="row">
+			<div class="col-md-3 text-left">{{ obj.user_name}}</div>
+			<div class="col-md-3 text-left">{{ obj.prod_ref}}</div>
+			<div class="col-md-3 text-left">{{ obj.item_name}}</div>
+			<div class="col-md-3 text-left">{{ obj.op_type}}</div>
+		</div>
+	</div>
+	<div class="col-md-2"></div>
+</div>
+{% endfor %} {% endblock %}
