--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -54,7 +54,7 @@
 		{% elif user.is_authenticated and user.profile.user_type == 'Cust' %}
 
 		<a
-			href="#"
+			href="{% url 'users:orders' item.id item.prod_code user.username %}"
 			style="width: 80px"
 			class="btn btn-warning">
 			Order
@@ -70,17 +70,27 @@
 	</div>
 </div>
 
-{% for obj in hist %}
 
-<div class="row mb-1">
-	<div class="col-md-8 offset-md-2 bg-danger text-white">
-		<div class="row">
-			<div class="col-md-3 text-left">{{ obj.user_name}}</div>
-			<div class="col-md-3 text-left">{{ obj.prod_ref}}</div>
-			<div class="col-md-3 text-left">{{ obj.item_name}}</div>
-			<div class="col-md-3 text-left">{{ obj.op_type}}</div>
+{% if user.is_authenticated %}
+
+	{% if user.profile.user_type == 'Rest' or user.profile.user_type == 'Admin' %}
+		{% for obj in hist %}
+
+		<div class="row mb-1">
+			<div class="col-md-8 offset-md-2 bg-danger text-white">
+				<div class="row">
+					<div class="col-md-3 text-left">{{ obj.user_name}}</div>
+					<div class="col-md-3 text-left">{{ obj.prod_ref}}</div>
+					<div class="col-md-3 text-left">{{ obj.item_name}}</div>
+					<div class="col-md-3 text-left">{{ obj.op_type}}</div>
+				</div>
+			</div>
+			<div class="col-md-2"></div>
 		</div>
-	</div>
-	<div class="col-md-2"></div>
-</div>
-{% endfor %} {% endblock %}
+		{% endfor %} 
+	{% endif %}
+
+{% endif %}
+
+
+{% endblock %}
