--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -72,25 +72,54 @@
 
 
 {% if user.is_authenticated %}
-
+	<!--Red-->
 	{% if user.profile.user_type == 'Rest' or user.profile.user_type == 'Admin' %}
-		{% for obj in hist %}
 
-		<div class="row mb-1">
-			<div class="col-md-8 offset-md-2 bg-danger text-white">
-				<div class="row">
-					<div class="col-md-3 text-left">{{ obj.user_name}}</div>
-					<div class="col-md-3 text-left">{{ obj.prod_ref}}</div>
-					<div class="col-md-3 text-left">{{ obj.item_name}}</div>
-					<div class="col-md-3 text-left">{{ obj.op_type}}</div>
+	{% for obj in hist %}
+
+	<div class="row mb-1">
+		<div class="col-md-8 offset-md-2 bg-danger text-white">
+			<div class="row">
+				<div class="col-md-3 text-left">{{ obj.user_name}}</div>
+				<div class="col-md-3 text-left">{{ obj.prod_ref}}</div>
+				<div class="col-md-3 text-left">{{ obj.item_name}}</div>
+				<div class="col-md-3 text-left">{{ obj.op_type}}</div>
+			</div>
+		</div>
+		<div class="col-md-2"></div>
+	</div>
+{% endfor %}
+
+	{% endif %}
+{% if user.profile.user_type == 'Rest' or user.profile.user_type == 'Cust' or user.profile.user_type == 'Admin' %}
+
+	{% for obj in oco %}
+
+	<div class="row mb-1">
+		<div class="col-md-8 offset-md-2 bg-success text-white">
+			<div class="row">
+				<div class="col-md-2 text-left">{{ obj.order_id }}</div>
+				<div class="col-md-2 text-left">{{ obj.prod_code }}</div>
+				<div class="col-md-2 text-left">{{ obj.quantity }}</div>
+				<div class="col-md-2 text-left">{{ obj.user }}</div>
+				<div class="col-md-2 text-left">{% if user.profile.user_type == 'Cust' %}
+				<a class="btn btn-warning btn-sm" href="{% url 'users:upd_orders' item.id obj.order_id %}">
+					    Edit
+					</a>
+					{% endif %}
+				</div>
+				<div class="col-md-2 text-left">{% if user.profile.user_type == 'Cust' %}
+					<a class="btn btn-primary btn-sm" href='#'>
+						Buy Now
+					</a>
+					{% endif %}
 				</div>
 			</div>
-			<div class="col-md-2"></div>
 		</div>
-		{% endfor %} 
+		<div class="col-md-2"></div>
+	</div>
+{% endfor %}
 	{% endif %}
-
 {% endif %}
-
 
 {% endblock %}
