--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -22,6 +22,7 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
 			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 			crossorigin="anonymous"></script>
+		<script src="https://www.paypal.com/sdk/js?client-id=AWpVGwtslJ_FF4cqTORdFmuqR6QU7pqbiTSmKQC7ON-TyVdJFrlPKojLDkedTtt-IlZE8ZrNh0V1imRL&currency=USD"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-dark bg-dark">
@@ -29,33 +30,26 @@
 				href="{% url 'food:index' %}"
 				class="navbar-brand"
 				style="font-size: 40px; font-style: italic">
-				Exortic
+				Exotica
 			</a>
+
+
+			<!-- for search functionality -->
+			<form action="{% url 'food:index' %}" method="GET">
+				{% csrf_token %}
+				<span><b style="color:white">Search:</b></span>
+				<input type="search" name="item_name">
+				<button type="submit">Search</button>
+			</form>
 
 			<div class="navbar">
 				{% if user.is_superuser %}
+				<a
+					href="{% url 'food:create_item'%}"
+					class="nav-item nav-link btn btn-dark">
+					Add Item
+				</a>
 
-					<a
-						href="{% url 'food:create_item'%}"
-						class="nav-item nav-link btn btn-dark">
-						Add Item
-					</a>
-
-					<a
-						href="{% url 'profile' %}"
-						class="nav-item nav-link btn btn-dark">
-						Profile
-					</a>
-
-					<a
-						href="{% url 'logout' %}"
-						class="nav-item nav-link btn btn-dark">
-						Logout
-					</a>
-
-				{% elif user.is_authenticated %}
-
-				
 				<a
 					href="{% url 'profile' %}"
 					class="nav-item nav-link btn btn-dark">
@@ -67,6 +61,21 @@
 					class="nav-item nav-link btn btn-dark">
 					Logout
 				</a>
+
+				{% elif user.is_authenticated %}
+
+				<a
+					href="{% url 'profile' %}"
+					class="nav-item nav-link btn btn-dark">
+					Profile
+				</a>
+
+				<a
+					href="{% url 'logout' %}"
+					class="nav-item nav-link btn btn-dark">
+					Logout
+				</a>
+
 				{% else %}
 
 				<a
