--- a/users/templates/users/orders.html
+++ b/users/templates/users/orders.html
@@ -6,7 +6,7 @@
         Are you sure you want to confirm the orders for <b>product {{ pdcd }}</b>by <b> {{ user }}</b>
     </p>
     <label for="qty">Enter Quantity: </label><br>
-    <input id="qty" name="qty" type="number" value="1">
+    <input id="qty" name="qty" type="number" value="1" min="1" max="10">
     <button class="btn btn-danger btn-sm" type="submit">Confirm</button>
 </form>
 {% endblock %}
