--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -30,7 +30,7 @@
 				href="{% url 'food:index' %}"
 				class="navbar-brand"
 				style="font-size: 40px; font-style: italic">
-				Exotica
+				Delicious
 			</a>
 
 
