--- a/users/templates/users/item-form.html
+++ b/users/templates/users/item-form.html
@@ -1,5 +1,26 @@
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button class="btn btn-success btn-sm">Save</button>
-</form>
+{% extends 'food/base.html' %}
+
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card">
+                <div class="card-header text-white bg-dark">
+                    <div class="card-title offset-md-1">
+                        <h1>Add Feedback</h1>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form }}
+                        <button class="btn btn-success btn-sm">Save</button>
+                    </form>
+                
+                </div>    
+            </div>
+            
+        </div>
+    </div>
+</div>
+{% endblock %}
