--- a/users/templates/users/orders_upd.html
+++ b/users/templates/users/orders_upd.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="card">
-                <div class="card-header text-white bg-info">
+                <div class="card-header text-white bg-dark">
                     <div class="card-title offset-md-1">
                         Update Order
                     </div>
@@ -19,7 +19,7 @@
                        
                        <br><label for="">Quantity: </label><br>
                        {{ form.quantity }}
-                    
+                        <br><br>
                         <button class="btn btn-success btn-sm offset-md-1" type="submit">Confirm</button>
                     </form>
                 
