--- a/users/templates/users/crf_upd.html
+++ b/users/templates/users/crf_upd.html
@@ -2,10 +2,26 @@
 
 {% block body %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Confirm</button>
-</form>
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card">
+                <div class="card-header text-white bg-dark">
+                    <div class="card-title offset-md-1">
+                        <h1>Edit Feedback</h1>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form }}
+                        <button type="submit" class="btn btn-success btn-sm">Confirm</button>
+                    </form>
+                
+                </div>    
+            </div>
+            
+        </div>
+    </div>
+</div>
 {% endblock %}
