--- a/users/templates/users/orders.html
+++ b/users/templates/users/orders.html
@@ -1,12 +1,31 @@
 {% extends 'food/base.html' %}
 {% block body %}
-<form method="POST">
-    {% csrf_token %}
-    <p>
-        Are you sure you want to confirm the orders for <b>product {{ pdcd }}</b>by <b> {{ user }}</b>
-    </p>
-    <label for="qty">Enter Quantity: </label><br>
-    <input id="qty" name="qty" type="number" value="1" min="1" max="10">
-    <button class="btn btn-danger btn-sm" type="submit">Confirm</button>
-</form>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card">
+                <div class="card-header text-white bg-dark">
+                    <div class="card-title offset-md-1">
+                        <h1>Place Your Order</h1>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <p>
+                            Are you sure you want to confirm the orders for <b>product {{ pdcd }}</b>by <b> {{ user }}</b>
+                        </p>
+                        <label for="qty">Enter Quantity: </label><br>
+                        <input id="qty" name="qty" type="number" value="1" min="1" max="10">
+                        <button class="btn btn-success btn-sm" type="submit">Place Order</button>
+                    </form>
+                
+                </div>    
+            </div>
+            
+        </div>
+    </div>
+</div>
+
 {% endblock %}
