--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -24,7 +24,7 @@
                         <input class="offset-md-1" type="password" id="pass" name="password"><br><br>
                     
                         <button class="btn btn-success btn-sm offset-md-1" type="submit">Login</button>
-                        <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+                        <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
                     </form>
                 
                 </div>    
