--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -7,19 +7,44 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		
 	</head>
 	<body>
 		{% block body %}
-		
-
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<!-- Add your carousel slides here -->
+				<div class="carousel-item active" >
+					<img src="https://esenzabysha.com/wp-content/uploads/dreaam-eat-travel.jpg" class="d-block w-100" alt="Slide 1" style="max-width: 100%; aspect-ratio: 30/10; object-fit: cover" height="60%">
+				</div>
+				<div class="carousel-item" >
+					<img src="https://esenzabysha.com/wp-content/uploads/your-body-is-your-true-home.jpg" class="d-block w-100" alt="Slide 2" style="max-width: 100%; aspect-ratio: 30/10; object-fit: cover" height="60%">
+				</div>
+				<div class="carousel-item" >
+					<img src="https://esenzabysha.com/wp-content/uploads/smoothies-foto-FB-web-2020-845x321.png" class="d-block w-100" alt="Slide 2" style="max-width: 100%; aspect-ratio: 30/10; object-fit: cover" height="60%">
+				</div>
+				<!-- Add more slides as needed -->
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div><br>
+				<h4 style="text-align: center; line-height: 30px;">	"Every product on Esenza by SHA menu is elaborated with fresh and tasty products, unprocessed and most of them taking into account the basic principles of  excellent foods .
+					You won’t find diary products or meat. Bread is not made out of processed flour and none of the desserts contains refined sugar.
+					Sandwiches and wraps, vegetable soups, sushi or carrot cake, a mix of Eastern and Western ingredients; all of them 100% natural and healthy."</h4><br>
 		{% for item in itemlist %} 
 			<div class="row mb-3">
 				<div class="col-md-3 offset-md-2">
 					<img 
 						src="{{ item.item_image }}"
 						class="card" 
-						height="135px"
-						weidth="230px"
+						height="140px"
+						weidth="240px"
 						>
 				</div>
 				<div class="col-md-4">
@@ -63,8 +88,11 @@
 					{% endif %}	
 				</div>
 			</div>
+			
+							  
+				
         {% endfor %}
 		{% endblock %}
-		
-	</body>
+	
+</body>
 </html>
