--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,8 +7,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 offset-md-4">
-            <div class="card">
-                <div class="card-header text-white bg-info">
+            <div class="card bg-light">
+                <div class="card-header text-white bg-dark">
                     <div class="card-title offset-md-1">
                         Login
                     </div>
