--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -38,16 +38,26 @@
 
 
 			<!-- for search functionality -->
-			<form class="form-search text-center" action="{% url 'food:index' %}" method="GET">
-				{% csrf_token %}
-				<span><b style="color:white"></b></span>
-				<input type="text" class="form-control" placeholder="Search...">
-				<button class="btn btn-outline-secondary" type="submit">
-					<i class="fas fa-search"></i>
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-					  </svg></button>
-			</form>
+			<form
+					action="{% url 'food:index' %}"
+					method="POST"
+					class="d-flex ms-auto"
+					role="search">
+					{% csrf_token %}
+					<input
+						class="form-control me-2 mr-2"
+						type="search"
+						name="item_name"
+						placeholder="Search for products"
+						aria-label="Search" />
+					<button
+						class="btn btn-light me-4"
+						type="submit">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+						</svg>
+					</button>
+					</form>
 
 			<div class="navbar">
 				{% if user.is_superuser %}
@@ -59,7 +69,7 @@
 
 				<a
 					href="{% url 'profile' %}"
-					class="nav-item nav-link btn btn-dark">
+					class="nav-item nav-link btn btn-dark mr-2">
 					Profile
 				</a>
 
