--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -37,61 +37,25 @@
 				<h4 style="text-align: center; line-height: 30px;">	"Every product on Esenza by SHA menu is elaborated with fresh and tasty products, unprocessed and most of them taking into account the basic principles of  excellent foods .
 					You won’t find diary products or meat. Bread is not made out of processed flour and none of the desserts contains refined sugar.
 					Sandwiches and wraps, vegetable soups, sushi or carrot cake, a mix of Eastern and Western ingredients; all of them 100% natural and healthy."</h4><br>
-		{% for item in itemlist %} 
-			<div class="row mb-3">
-				<div class="col-md-3 offset-md-2">
-					<img 
-						src="{{ item.item_image }}"
-						class="card" 
-						height="140px"
-						weidth="240px"
-						>
-				</div>
-				<div class="col-md-4">
-					<h3
-						style="font-size: 1.5rem;"
-					>
-						{{ item.item_name}}
-					</h3>
-					<h5
-						 style="font-size: 1rem;
-						 font-style: italic;
-					
-					">
-						{{ item.item_desc | truncatewords:6 }}
-					</h5>
-					<h6>
-						${{ item.item_price}}
-					</h6>
-					<h6 style="
-					font-style: italic;
-					">
-						added for: {{ item.for_user }}
-					</h6>
-					<h6 style="
-					font-style: italic;
-					">
-						added by superuser: {{ item.user }}
-					</h6>
-				</div>
-				<div class="col-md-3">
-					{% if user.is_authenticated %}
-					
-						<a
-							href="{% url 'food:detail' item.id %}"
-							style="width: 100px;"
-							class="btn btn-success"
-							>
-							Details
-						</a>
-
-					{% endif %}	
-				</div>
-			</div>
-			
-							  
-				
-        {% endfor %}
+					<section class="py-5 ">
+						<div class="container px-4 px-lg-5 mt-5">
+							<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center p-1">
+								{% for item in itemlist %}
+									<div class="card mb-5 mr-5 bg-light" style="width: 18rem;">
+										<img src="{{ item.item_image }}" class="card-img-top" alt="...">
+										<div class="card-body">
+											<h5 class="card-title">{{ item.item_name }}</h5>
+											<p class="card-text">{{ item.item_desc | truncatewords:6 }}</p>
+											<h6>${{ item.item_price }}</h6>
+											{% if user.is_authenticated %}
+												<a href="{% url 'food:detail' item.id %}" class="btn btn-primary">Details</a>
+											{% endif %}
+										</div>
+									</div>
+								{% endfor %}
+							</div>
+						</div>
+					</section>
 		{% endblock %}
 	
 </body>
