--- a/food/templates/food/item-form.html
+++ b/food/templates/food/item-form.html
@@ -6,8 +6,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-4 offset-md-4">
-			<div class="card">
-				<div class="card-header text-white bg-info">
+			<div class="card bg-light">
+				<div class="card-header text-white bg-dark">
 					<div class="card-title">Add Item</div>
 				</div>
 				<div class="card-body">
