--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -7,8 +7,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 offset-md-4">
-            <div class="card">
-                <div class="card-header text-white bg-info">
+            <div class="card bg-light">
+                <div class="card-header text-white bg-dark">
                     <div class="card-title offset-md-0">
                         Profile
                     </div>
@@ -26,6 +26,15 @@
                             <p>{{ user.profile.location }}</p>
                         </div>
                     </div>
+                    <!-- Edit Profile Button -->
+                    <div class="row mt-3">
+                        <div class="offset-md-3">
+                            <a href="{% url 'users:edit_profile' %}" class="btn btn-primary btn-sm">
+                                Edit Profile
+                            </a>
+                        </div>
+                    </div>
+
                     
                 
                 </div>    
