--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,12 @@
 {% extends 'food/base.html' %} {% block body %}
 
-<br /><br /><br />
 
-<div class="container">
+
+<div class="container ">
 	<div class="row">
 		<div class="col-md-4 offset-md-4">
-			<div class="card">
-				<div class="card-header text-white bg-info">
+			<div class="card bg-light">
+				<div class="card-header text-white bg-dark">
 					<div class="card-title">Sign Up</div>
 				</div>
 				<div class="card-body">
@@ -37,7 +37,7 @@
 						<br />
 						<br />
 						<button
-							class="offset-md-1"
+							class="btn btn-success btn-sm offset-md-1"
 							type="submit">
 							Sign Up
 						</button>
